@@ -64,15 +64,75 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-antrun-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>ktlint</id>
+            <configuration>
+              <target name="ktlint">
+                <java
+                  taskname="ktlint"
+                  dir="${basedir}"
+                  fork="true"
+                  failonerror="true"
+                  classpathref="maven.plugin.classpath"
+                  classname="com.pinterest.ktlint.Main"
+                >
+                  <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+                  <!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
+                  <arg value="src/**/*.kt"/>
+                </java>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>ktlint-format</id>
+            <configuration>
+              <target name="ktlint">
+                <java
+                  taskname="ktlint"
+                  dir="${basedir}"
+                  fork="true"
+                  failonerror="true"
+                  classpathref="maven.plugin.classpath"
+                  classname="com.pinterest.ktlint.Main"
+                >
+                  <jvmarg value="--add-opens=java.base/java.lang=ALL-UNNAMED"/>
+                  <!-- see https://pinterest.github.io/ktlint/install/cli/#command-line-usage for more information -->
+                  <arg value="-F"/>
+                  <arg value="src/**/*.kt"/>
+                </java>
+              </target>
+            </configuration>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>com.pinterest.ktlint</groupId>
+            <artifactId>ktlint-cli</artifactId>
+            <version>1.1.0</version>
+          </dependency>
+        </dependencies>
+      </plugin>
     </plugins>
   </build>
-
 
   <modules>
     <module>build-tools</module>
     <module>spring-boot/parent-project</module>
     <module>spring-boot/app</module>
     <module>spring-boot/lib</module>
+    <module>spring-boot/kt-app</module>
+    <module>spring-boot/kt-lib</module>
     <module>micronaut/micronaut-parent-project</module>
     <module>micronaut/micronaut-app</module>
     <module>micronaut/micronaut-lib</module>
